# QuizMan

./: .gitignore  CMakeLists.txt  QuizMan.pro  README.md
assets/databases/: questions.qm
assets/scripts/: questions.sql
include/: DroppableImageView.hpp  Exam.hpp  ExamNameAsker.hpp  IntroWindow.hpp  MainWindow.hpp  MainWindow.hpp.Ci4332  QuestionEditor.hpp  QuestionForm.hpp  RegistryDialog.hpp  RegistryEdit.hpp  SectionDialog.hpp  SectionEdit.hpp
include/Account/: AccountManager.hpp  UserAccount.hpp
include/Exam/: Area.hpp  ExamManager.hpp  Question.hpp  QuestionDBManager.hpp  QuizManExam.hpp
resources/: resources.qrc
resources/database/: quizman.db  test.db
resources/databases/: questions.qm
resources/scripts/: accounts.sql  areas.sql  options.sql  subjects.sql  topics.sql  topicsquestions.sql
resources/ui/: DroppableImageView.ui  ExamNameAsker.ui  IntroWindow.ui  MainWindow.ui  QuestionEditor.ui  QuestionForm.ui  RegistryDialog.ui  RegistryEdit.ui  SectionDialog.ui  SectionEdit.ui
src/: DroppableImageView.cpp  ExamNameAsker.cpp  IntroWindow.cpp  Main.cpp  MainWindow.cpp  QuestionEditor.cpp  QuestionForm.cpp  QuizMan.cpp  QuizMan.hpp  RegistryDialog.cpp  RegistryEdit.cpp  SectionDialog.cpp  SectionEdit.cpp
src/Account/: AccountManager.cpp  UserAccount.cpp
src/Exam/: ExamManager.cpp  Question.cpp  QuestionDBManager.cpp  QuizManExam.cpp  Subject.cpp
src/SQLiteCpp/: Statement.cpp  Statement.h
tests/: ExamObjectTesttest.db  SimpleClient.cpp
tests/AccountCheckingTest/: AccountCheckingTest.pro  UserAccount.cpp  UserAccount.hpp  main.cpp
tests/DatabaseTest/: DatabaseTest  DatabaseTest.pro  main.cpp
tests/ExamObjectTest/: ExamObjectTest  ExamObjectTest.pro  main.cpp
tests/ExamObjectTest/include/: Account.hpp  Exam.hpp  IntroWindow.hpp  ProgramConstants.hpp
tests/ExamObjectTest/include/Account/: UserAccount.hpp
tests/ExamObjectTest/include/Exam/: Option.hpp  Question.hpp  QuizManExam.hpp  Subject.hpp
tests/ExamObjectTest/src/: IntroWindow.cpp  MainWindow.cpp
tests/ExamObjectTest/src/Account/: UserAccount.cpp
tests/ExamObjectTest/src/Exam/: Area.cpp  ExamManager.cpp  Option.cpp  QuizManExam.cpp
tests/build-AccountCheckingTest-Desktop-Debug/: Makefile
